--- a/public/assets/styles/styles.css
+++ b/public/assets/styles/styles.css
@@ -11,4 +11,5 @@
     --fonte_preta_assento: #000000;
     --fonte_branca: #ffffff;
     --sucesso: #247A6B;
+    font-family: 'Roboto', sans-serif;
 }
