--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -12,4 +12,6 @@
     --fonte_branca: #ffffff;
     --sucesso: #247A6B;
     font-family: 'Roboto', sans-serif;
+    text-decoration: none;
+    list-style: none;
 }
